--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.rbc
 .bundle
 .config
+.DS_Store
 coverage
 InstalledFiles
 lib/bundler/man
@@ -11,7 +12,6 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
-
 # YARD artifacts
 .yardoc
 _yardoc
